--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_activity_lista_film">ActivityListaFilm</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
